# EisenFaust

./: .gitignore
efcpp/: CMakeLists.txt
efcpp/src/: main.cpp
efrs/: Cargo.toml
efrs-tui/: Cargo.toml
efrs-tui/src/: app.rs  app_util.rs  crossterm.rs  exec_cell.rs  lengthy.rs  main.rs  runner_test.rs  ui.rs  ui_v0.rs  util.rs
efrs/src/: main.rs  tutorial2.rs
src/: keyboard_exploration.py  main.css  main.py  main1.css  main2.css
