[package]
name = "eisen_faust_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["crossterm"]


[dependencies]
argh = "0.1"
tui = { version = "0.19.0" }
termion = { version = "1.5", optional = true }
crossterm = { version = "0.25", optional = true }
bitflags = "2.2.1"
