[package]
name = "eisen_faust_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["crossterm"]


[dependencies]
argh = "0.1"
tui = { version = "0.19.0" }
termion = { version = "1.5", optional = true }
crossterm = { version = "0.25", optional = true }
bitflags = "2.2.1"
async-process = "1.7.0"
futures-lite = "1.13.0"
chrono = "0.4.24"

[[bin]]

name = "lengthy"
path = "src/lengthy.rs"

[[bin]]

name = "runner-test"
path = "src/runner_test.rs"
